# src/Admin.Template/Shared/Models/PagedResultRequestModel.cs
@@ -9,4 +9,10 @@ public class PagedResultRequestModel
     public string? Search { get; set; }
 
     public string? OrderBy { get; set; } = string.Empty;
+
+    public bool OrderByDesc { get; set; }
+
+    public string? ThenBy { get; set; } = string.Empty;
+
+    public bool ThenByDesc { get; set; }
 }
